RESOLVED FIXED128612
IndexedDB tests on some bots are flakey (timeouts)
https://bugs.webkit.org/show_bug.cgi?id=128612
Summary IndexedDB tests on some bots are flakey (timeouts)
Brady Eidson
Reported 2014-02-11 10:41:40 PST
IndexedDB tests on some bots are flakey (timeouts) They were disabled in http://trac.webkit.org/changeset/163869 Canonical example of failures is http://build.webkit.org/results/Apple%20MountainLion%20Release%20WK2%20(Tests)/r163866%20(15869)/results.html As the URL suggests, that's the Mountain Lion release build. I cannot reproduce on Mavericks in a Debug build. I'm about to try a release build.
Attachments
Patch v1 (6.16 KB, patch)
2014-02-11 11:05 PST, Brady Eidson
sam: review+
Radar WebKit Bug Importer
Comment 1 2014-02-11 11:02:41 PST
Brady Eidson
Comment 2 2014-02-11 11:04:30 PST
Running the tests for 20 iterations in a release build I easily reproduced 6 times. Database process crashed: Thread 3 Crashed:: Dispatch queue: com.apple.WebKit.DatabaseProcess 0 com.apple.JavaScriptCore 0x000000011102866e WTFCrash + 62 (Assertions.cpp:333) 1 com.apple.JavaScriptCore 0x00000001110526ed WTF::StringImpl::~StringImpl() + 525 2 com.apple.JavaScriptCore 0x00000001110526fe WTF::StringImpl::destroy(WTF::StringImpl*) + 14 (StringImpl.cpp:147) 3 com.apple.JavaScriptCore 0x0000000110f9da9c JSC::PropertyTable::~PropertyTable() + 108 (StringImpl.h:609) 4 com.apple.JavaScriptCore 0x0000000110eff801 JSC::MarkedBlock::FreeList JSC::MarkedBlock::sweepHelper<(JSC::MarkedBlock::DestructorType)1>(JSC::MarkedBlock::SweepMode) + 353 (JSCell.h:133) 5 com.apple.JavaScriptCore 0x0000000110f02ee9 JSC::LastChanceToFinalize::ReturnType JSC::MarkedSpace::forEachBlock<JSC::LastChanceToFinalize>(JSC::LastChanceToFinalize&) + 137 (DoublyLinkedList.h:66) 6 com.apple.JavaScriptCore 0x0000000110f01012 JSC::MarkedSpace::lastChanceToFinalize() + 66 (DelayedReleaseScope.h:46) 7 com.apple.JavaScriptCore 0x0000000110fe8b2d JSC::VM::~VM() + 189 (VM.cpp:342) 8 com.apple.JavaScriptCore 0x0000000110e818e0 JSC::JSLockHolder::~JSLockHolder() + 80 (FastMalloc.h:275) 9 com.apple.WebKit2 0x0000000110550d11 WebKit::UniqueIDBDatabaseBackingStoreSQLite::~UniqueIDBDatabaseBackingStoreSQLite() + 173 (UniqueIDBDatabaseBackingStoreSQLite.cpp:82) 10 com.apple.WebKit2 0x0000000110550c4c WebKit::UniqueIDBDatabaseBackingStoreSQLite::~UniqueIDBDatabaseBackingStoreSQLite() + 14 (FastMalloc.h:275) 11 com.apple.WebKit2 0x0000000110497a6e WebKit::UniqueIDBDatabase::shutdownBackingStore(WebKit::UniqueIDBDatabaseShutdownType, WTF::String const&) + 36 (UniqueIDBDatabase.cpp:144) 12 com.apple.WebKit2 0x000000011049f2e7 WebKit::UniqueIDBDatabase::performNextDatabaseTask() + 111 (memory:2677) 13 com.apple.WebKit2 0x0000000110663e09 ___ZN9WorkQueue8dispatchENSt3__18functionIFvvEEE_block_invoke + 23 (WorkQueueMac.cpp:34) 14 libdispatch.dylib 0x00007fff8db7b1d7 _dispatch_call_block_and_release + 12 15 libdispatch.dylib 0x00007fff8db782ad _dispatch_client_callout + 8 16 libdispatch.dylib 0x00007fff8db7a68f _dispatch_queue_drain + 451 17 libdispatch.dylib 0x00007fff8db7b9dd _dispatch_queue_invoke + 110 18 libdispatch.dylib 0x00007fff8db79fa3 _dispatch_root_queue_drain + 75 19 libdispatch.dylib 0x00007fff8db7b193 _dispatch_worker_thread2 + 40 20 libsystem_pthread.dylib 0x00007fff8e88eef8 _pthread_wqthread + 314 21 libsystem_pthread.dylib 0x00007fff8e891fb9 start_wqthread + 13 Replacing JSLockHolder with APIEntryShim was an insta-fix
Brady Eidson
Comment 3 2014-02-11 11:05:06 PST
Created attachment 223882 [details] Patch v1
Brady Eidson
Comment 4 2014-02-11 11:27:13 PST
Note You need to log in before you can comment on or make changes to this bug.