Source/WebKit2/DatabaseProcess/IndexedDB/sqlite/UniqueIDBDatabaseBackingStoreSQLite.cpp
@@ -33,6 +33,7 @@
 #include "Logging.h"
 #include "SQLiteIDBCursor.h"
 #include "SQLiteIDBTransaction.h"
+#include <JavaScriptCore/APIShims.h>
 #include <WebCore/FileSystem.h>
 #include <WebCore/IDBBindingUtilities.h>
 #include <WebCore/IDBDatabaseMetadata.h>
@@ -76,7 +77,7 @@ UniqueIDBDatabaseBackingStoreSQLite::~UniqueIDBDatabaseBackingStoreSQLite()
     m_sqliteDB = nullptr;
 
     if (m_vm) {
-        JSLockHolder lockHolder(m_vm.get());
+        APIEntryShim shim(m_vm.get());
         m_globalObject.clear();
         m_vm = nullptr;
     }
@@ -630,7 +631,7 @@ bool UniqueIDBDatabaseBackingStoreSQLite::createIndex(const IDBIdentifier& trans
 
     m_cursors.set(cursor->identifier(), cursor);
 
-    OwnPtr<JSLockHolder> lockHolder;
+    OwnPtr<APIEntryShim> shim;
     while (!cursor->currentKey().isNull) {
         const IDBKeyData& key = cursor->currentKey();
         const Vector<uint8_t>& valueBuffer = cursor->currentValueBuffer();
@@ -638,12 +639,12 @@ bool UniqueIDBDatabaseBackingStoreSQLite::createIndex(const IDBIdentifier& trans
         if (!m_globalObject) {
             ASSERT(!m_vm);
             m_vm = VM::create();
-            lockHolder = adoptPtr(new JSLockHolder(m_vm.get()));
+            shim = adoptPtr(new APIEntryShim(m_vm.get()));
             m_globalObject.set(*m_vm, JSGlobalObject::create(*m_vm, JSGlobalObject::createStructure(*m_vm, jsNull())));
         }
 
-        if (!lockHolder)
-            lockHolder = adoptPtr(new JSLockHolder(m_vm.get()));
+        if (!shim)
+            shim = adoptPtr(new APIEntryShim(m_vm.get()));
 
         Deprecated::ScriptValue value = deserializeIDBValueBuffer(m_globalObject->globalExec(), valueBuffer, true);
         Vector<IDBKeyData> indexKeys;
